--- a/Frontend/css/session-scheduling.css
+++ b/Frontend/css/session-scheduling.css
@@ -1,4 +1,25 @@
 /* screen - session-scheduling */
+:root {
+  --shady-lady: #B6B2D4;
+  --background-color: var(--shady-lady);
+  --height: 1024px;
+  --width: 1440px;
+  --overlap-group4-height: 1045px;
+  --overlap-group4-margin-left: -5px;
+  --overlap-group4-width: 1480px;
+  --template-height: 1045px;
+  --template-left: 0;
+  --template-top: 0;
+  --template-width: 1480px;
+  --overlap-group2-height: 1044px;
+  --overlap-group2-margin-left: -36px;
+  --overlap-group2-margin-top: -20px;
+  --overlap-group2-width: 1516px;
+  --rectangle-188-height: 1024px;
+  --rectangle-188-left: 41px;
+  --rectangle-188-top: 20px;
+  --rectangle-188-width: 1440px;
+}
 
 .session-scheduling {
   align-items: flex-start;
