--- a/Frontend/css/student-dashboard.css
+++ b/Frontend/css/student-dashboard.css
@@ -1,480 +1,491 @@
 /* screen - student-dashboard */
+:root {
+  --background-color: #afa7a7fc;
+  --template-transform: rotate(-0.05deg);
+  --border-radius: 20px;
+  --height: 1040.34px;
+  --width: 1480.94px;
+  --group-height: 193px;
+  --group-left: 212px;
+  --group-width: 1135px;
+  --overlap-group-height: 190px;
+  --overlap-group-width: 328px;
+}
 
 .student-dashboard {
-    align-items: flex-start;
-    background-color: #afa7a7fc;
-    display: flex;
-    height: 1040.34px;
-    overflow: hidden;
-    width: 1480.94px;
-  }
-  
-  .student-dashboard .overlap-group5 {
-    height: 1041px;
-    margin-left: -1px;
-    margin-top: -1.0px;
-    position: relative;
-    width: 1482px;
-  }
-  
-  .student-dashboard .template {
-    height: 1040px;
-    left: 0;
-    position: absolute;
-    top: 1px;
-    transform: rotate(-0.05deg);
-    width: 1481px;
-  }
-  
-  .student-dashboard .group-24 {
-    align-items: flex-end;
-    display: flex;
-    height: 193px;
-    left: 212px;
-    min-width: 1135px;
-    position: absolute;
-    top: 119px;
-  }
-  
-  .student-dashboard .overlap-group2 {
-    border-radius: 20px;
-    height: 190px;
-    margin-bottom: 0;
-    position: relative;
-    width: 328px;
-  }
-  
-  .student-dashboard .dashbored {
-    background-color: var(--concrete);
-    border: 1px solid;
-    border-color: var(--black-2);
-    border-radius: 20px;
-    height: 190px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    transform: rotate(-0.05deg);
-    width: 328px;
-  }
-  
-  .student-dashboard .number {
-    left: 32px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 110px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .my-tutors {
-    left: 23px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 147px;
-    transform: rotate(-0.05deg);
-    white-space: nowrap;
-  }
-  
-  .student-dashboard .gmail_groups {
-    height: 62px;
-    left: 18px;
-    position: absolute;
-    top: 30px;
-    width: 71px;
-  }
-  
-  .student-dashboard .overlap-group1 {
-    border-radius: 20px;
-    height: 190px;
-    margin-bottom: 0.36px;
-    margin-left: 71px;
-    position: relative;
-    width: 328px;
-  }
-  
-  .student-dashboard .number-1 {
-    left: 30px;
-    top: 112px;
-  }
-  
-  .student-dashboard .new-message {
-    left: 21px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 146px;
-    transform: rotate(-0.05deg);
-    white-space: nowrap;
-  }
-  
-  .student-dashboard .mail {
-    height: 58px;
-    left: 11px;
-    position: absolute;
-    top: 34px;
-    width: 69px;
-  }
-  
-  .student-dashboard .overlap-group {
-    align-self: flex-start;
-    border-radius: 20px;
-    height: 190px;
-    margin-left: 66px;
-    position: relative;
-    width: 328px;
-  }
-  
-  .student-dashboard .address {
-    left: 35px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 112px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .weekly-hour {
-    left: 26px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 143px;
-    transform: rotate(-0.05deg);
-    white-space: nowrap;
-  }
-  
-  .student-dashboard .circular-determinate-progress-indicator {
-    height: 74px;
-    left: 22px;
-    position: absolute;
-    top: 28px;
-    width: 75px;
-  }
-  
-  .student-dashboard .number-2 {
-    color: var(--black);
-    font-family: var(--font-family-inter);
-    font-size: 30px;
-    font-weight: 900;
-    left: 40px;
-    top: 44px;
-    white-space: nowrap;
-  }
-  
-  .student-dashboard .overlap-group3 {
-    border-radius: 20px;
-    height: 417px;
-    left: 212px;
-    position: absolute;
-    top: 354px;
-    width: 1121px;
-  }
-  
-  .student-dashboard .dashbored-1 {
-    align-items: flex-start;
-    background-color: #e6e6e6;
-    border-radius: 20px;
-    display: flex;
-    gap: 9416px;
-    height: 417px;
-    left: 0;
-    min-width: 1121px;
-    position: absolute;
-    top: 0;
-  }
-  
-  .student-dashboard .icon {
-    height: 103px;
-    margin-left: -9976px;
-    margin-top: -2404.18px;
-    width: 560px;
-  }
-  
-  .student-dashboard .dashbored-2 {
-    align-self: center;
-    background-color: #afa7a71f;
-    border: 1px solid;
-    border-color: #00000033;
-    border-radius: 20px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 415px;
-    margin-top: 0;
-    transform: rotate(-0.05deg);
-    width: 1121px;
-  }
-  
-  .student-dashboard .classes {
-    left: 14px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 12px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .dashbored-3 {
-    height: 136px;
-    left: 10px;
-    position: absolute;
-    top: 71px;
-    width: 259px;
-  }
-  
-  .student-dashboard .dashbored-4 {
-    background-color: var(--white-2);
-    border: 1px solid;
-    border-color: var(--black-2);
-    border-radius: 20px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 128px;
-    left: 283px;
-    position: absolute;
-    top: 72px;
-    transform: rotate(-0.05deg);
-    width: 251px;
-  }
-  
-  .student-dashboard .dashbored-5 {
-    background-color: var(--white-2);
-    border: 1px solid;
-    border-color: var(--black-2);
-    border-radius: 20px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 128px;
-    left: 564px;
-    position: absolute;
-    top: 71px;
-    transform: rotate(-0.05deg);
-    width: 251px;
-  }
-  
-  .student-dashboard .dashbored-6 {
-    height: 136px;
-    left: 848px;
-    position: absolute;
-    top: 71px;
-    width: 259px;
-  }
-  
-  .student-dashboard .dashbored-7 {
-    background-color: var(--white-2);
-    border: 1px solid;
-    border-color: var(--black-2);
-    border-radius: 20px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 128px;
-    left: 14px;
-    position: absolute;
-    top: 251px;
-    transform: rotate(-0.05deg);
-    width: 251px;
-  }
-  
-  .student-dashboard .dashbored-8 {
-    height: 136px;
-    left: 279px;
-    position: absolute;
-    top: 250px;
-    width: 259px;
-  }
-  
-  .student-dashboard .assembly {
-    left: 74px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 85px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .biology {
-    left: 355px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 87px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .chemistry {
-    left: 626px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 86px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .physics {
-    left: 930px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 86px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .language {
-    left: 81px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 270px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .algebra {
-    left: 362px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 270px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .text {
-    left: 1386px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 971px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .overlap-group4 {
-    height: 210px;
-    left: 215px;
-    position: absolute;
-    top: 788px;
-    width: 1121px;
-  }
-  
-  .student-dashboard .dashbored-9 {
-    background-color: var(--concrete);
-    border: 1px solid;
-    border-color: var(--black-2);
-    border-radius: 20px;
-    height: 209px;
-    left: 0;
-    position: absolute;
-    top: 1px;
-    transform: rotate(-0.05deg);
-    width: 1121px;
-  }
-  
-  .student-dashboard .completed-meetings {
-    left: 26px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 7px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .x10-24-physics-at-11pm-tutor-adem-h {
-    left: 73px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 124px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .x1021-biology-1030am-tutor-emily-c {
-    height: 26px;
-    left: 70px;
-    position: absolute;
-    top: 85px;
-    width: 338px;
-  }
-  
-  .student-dashboard .corner-down-right {
-    height: 32px;
-    left: 35px;
-    position: absolute;
-    top: 72px;
-    width: 32px;
-  }
-  
-  .student-dashboard .corner-down-right-1 {
-    top: 119px;
-  }
-  
-  .student-dashboard .x111-algebra-at-9pm-tutor-lily-k {
-    left: 73px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 165px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .corner-down-right-2 {
-    top: 160px;
-  }
-  
-  .student-dashboard .rectangle-175 {
-    height: 28px;
-    left: 30px;
-    position: absolute;
-    top: 38px;
-    width: 267px;
-  }
-  
-  .student-dashboard .upcoming-meetings {
-    left: 46px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-shadow: 0px 4px 4px #00000040;
-    top: 38px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .icon-1 {
-    height: 23px;
-    left: 10px;
-    position: absolute;
-    top: 30px;
-    width: 12px;
-  }
-  
-  .student-dashboard .see-more {
-    left: 1002px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 171px;
-    transform: rotate(-0.05deg);
-  }
-  
-  .student-dashboard .icon-2 {
-    height: 27px;
-    left: 1091px;
-    position: absolute;
-    top: 171px;
-    width: 20px;
-  }
-  
-  .student-dashboard .corner-down-right-3 {
-    height: 32px;
-    left: 30px;
-    position: absolute;
-    width: 32px;
-  }
-  
-  .student-dashboard .number-3 {
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    transform: rotate(-0.05deg);
-  }
-  
+  align-items: flex-start;
+  background-color: #afa7a7fc;
+  display: flex;
+  height: 1040.34px;
+  overflow: hidden;
+  width: 1480.94px;
+}
+
+.student-dashboard .overlap-group5 {
+  height: 1041px;
+  margin-left: -1px;
+  margin-top: -1.0px;
+  position: relative;
+  width: 1482px;
+}
+
+.student-dashboard .template {
+  height: 1040px;
+  left: 0;
+  position: absolute;
+  top: 1px;
+  transform: rotate(-0.05deg);
+  width: 1481px;
+}
+
+.student-dashboard .group-24 {
+  align-items: flex-end;
+  display: flex;
+  height: 193px;
+  left: 212px;
+  min-width: 1135px;
+  position: absolute;
+  top: 119px;
+}
+
+.student-dashboard .overlap-group2 {
+  border-radius: 20px;
+  height: 190px;
+  margin-bottom: 0;
+  position: relative;
+  width: 328px;
+}
+
+.student-dashboard .dashbored {
+  background-color: var(--concrete);
+  border: 1px solid;
+  border-color: var(--black-2);
+  border-radius: 20px;
+  height: 190px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  transform: rotate(-0.05deg);
+  width: 328px;
+}
+
+.student-dashboard .number {
+  left: 32px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 110px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .my-tutors {
+  left: 23px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 147px;
+  transform: rotate(-0.05deg);
+  white-space: nowrap;
+}
+
+.student-dashboard .gmail_groups {
+  height: 62px;
+  left: 18px;
+  position: absolute;
+  top: 30px;
+  width: 71px;
+}
+
+.student-dashboard .overlap-group1 {
+  border-radius: 20px;
+  height: 190px;
+  margin-bottom: 0.36px;
+  margin-left: 71px;
+  position: relative;
+  width: 328px;
+}
+
+.student-dashboard .number-1 {
+  left: 30px;
+  top: 112px;
+}
+
+.student-dashboard .new-message {
+  left: 21px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 146px;
+  transform: rotate(-0.05deg);
+  white-space: nowrap;
+}
+
+.student-dashboard .mail {
+  height: 58px;
+  left: 11px;
+  position: absolute;
+  top: 34px;
+  width: 69px;
+}
+
+.student-dashboard .overlap-group {
+  align-self: flex-start;
+  border-radius: 20px;
+  height: 190px;
+  margin-left: 66px;
+  position: relative;
+  width: 328px;
+}
+
+.student-dashboard .address {
+  left: 35px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 112px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .weekly-hour {
+  left: 26px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 143px;
+  transform: rotate(-0.05deg);
+  white-space: nowrap;
+}
+
+.student-dashboard .circular-determinate-progress-indicator {
+  height: 74px;
+  left: 22px;
+  position: absolute;
+  top: 28px;
+  width: 75px;
+}
+
+.student-dashboard .number-2 {
+  color: var(--black);
+  font-family: var(--font-family-inter);
+  font-size: 30px;
+  font-weight: 900;
+  left: 40px;
+  top: 44px;
+  white-space: nowrap;
+}
+
+.student-dashboard .overlap-group3 {
+  border-radius: 20px;
+  height: 417px;
+  left: 212px;
+  position: absolute;
+  top: 354px;
+  width: 1121px;
+}
+
+.student-dashboard .dashbored-1 {
+  align-items: flex-start;
+  background-color: #e6e6e6;
+  border-radius: 20px;
+  display: flex;
+  gap: 9416px;
+  height: 417px;
+  left: 0;
+  min-width: 1121px;
+  position: absolute;
+  top: 0;
+}
+
+.student-dashboard .icon {
+  height: 103px;
+  margin-left: -9976px;
+  margin-top: -2404.18px;
+  width: 560px;
+}
+
+.student-dashboard .dashbored-2 {
+  align-self: center;
+  background-color: #afa7a71f;
+  border: 1px solid;
+  border-color: #00000033;
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px #00000040;
+  height: 415px;
+  margin-top: 0;
+  transform: rotate(-0.05deg);
+  width: 1121px;
+}
+
+.student-dashboard .classes {
+  left: 14px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 12px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .dashbored-3 {
+  height: 136px;
+  left: 10px;
+  position: absolute;
+  top: 71px;
+  width: 259px;
+}
+
+.student-dashboard .dashbored-4 {
+  background-color: var(--white-2);
+  border: 1px solid;
+  border-color: var(--black-2);
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px #00000040;
+  height: 128px;
+  left: 283px;
+  position: absolute;
+  top: 72px;
+  transform: rotate(-0.05deg);
+  width: 251px;
+}
+
+.student-dashboard .dashbored-5 {
+  background-color: var(--white-2);
+  border: 1px solid;
+  border-color: var(--black-2);
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px #00000040;
+  height: 128px;
+  left: 564px;
+  position: absolute;
+  top: 71px;
+  transform: rotate(-0.05deg);
+  width: 251px;
+}
+
+.student-dashboard .dashbored-6 {
+  height: 136px;
+  left: 848px;
+  position: absolute;
+  top: 71px;
+  width: 259px;
+}
+
+.student-dashboard .dashbored-7 {
+  background-color: var(--white-2);
+  border: 1px solid;
+  border-color: var(--black-2);
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px #00000040;
+  height: 128px;
+  left: 14px;
+  position: absolute;
+  top: 251px;
+  transform: rotate(-0.05deg);
+  width: 251px;
+}
+
+.student-dashboard .dashbored-8 {
+  height: 136px;
+  left: 279px;
+  position: absolute;
+  top: 250px;
+  width: 259px;
+}
+
+.student-dashboard .assembly {
+  left: 74px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 85px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .biology {
+  left: 355px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 87px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .chemistry {
+  left: 626px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 86px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .physics {
+  left: 930px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 86px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .language {
+  left: 81px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 270px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .algebra {
+  left: 362px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 270px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .text {
+  left: 1386px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 971px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .overlap-group4 {
+  height: 210px;
+  left: 215px;
+  position: absolute;
+  top: 788px;
+  width: 1121px;
+}
+
+.student-dashboard .dashbored-9 {
+  background-color: var(--concrete);
+  border: 1px solid;
+  border-color: var(--black-2);
+  border-radius: 20px;
+  height: 209px;
+  left: 0;
+  position: absolute;
+  top: 1px;
+  transform: rotate(-0.05deg);
+  width: 1121px;
+}
+
+.student-dashboard .completed-meetings {
+  left: 26px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 7px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .x10-24-physics-at-11pm-tutor-adem-h {
+  left: 73px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 124px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .x1021-biology-1030am-tutor-emily-c {
+  height: 26px;
+  left: 70px;
+  position: absolute;
+  top: 85px;
+  width: 338px;
+}
+
+.student-dashboard .corner-down-right {
+  height: 32px;
+  left: 35px;
+  position: absolute;
+  top: 72px;
+  width: 32px;
+}
+
+.student-dashboard .corner-down-right-1 {
+  top: 119px;
+}
+
+.student-dashboard .x111-algebra-at-9pm-tutor-lily-k {
+  left: 73px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 165px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .corner-down-right-2 {
+  top: 160px;
+}
+
+.student-dashboard .rectangle-175 {
+  height: 28px;
+  left: 30px;
+  position: absolute;
+  top: 38px;
+  width: 267px;
+}
+
+.student-dashboard .upcoming-meetings {
+  left: 46px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 4px 4px #00000040;
+  top: 38px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .icon-1 {
+  height: 23px;
+  left: 10px;
+  position: absolute;
+  top: 30px;
+  width: 12px;
+}
+
+.student-dashboard .see-more {
+  left: 1002px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 171px;
+  transform: rotate(-0.05deg);
+}
+
+.student-dashboard .icon-2 {
+  height: 27px;
+  left: 1091px;
+  position: absolute;
+  top: 171px;
+  width: 20px;
+}
+
+.student-dashboard .corner-down-right-3 {
+  height: 32px;
+  left: 30px;
+  position: absolute;
+  width: 32px;
+}
+
+.student-dashboard .number-3 {
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  transform: rotate(-0.05deg);
+}
